Bug 42961 - : Setting $DATA causes LibreOffice to crash
Summary: : Setting $DATA causes LibreOffice to crash
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.3.4 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:3.6.0 target:3.5.2
Keywords:
: 47330 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-11-15 15:36 UTC by Keith Thompson
Modified: 2012-03-24 09:52 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Keith Thompson 2011-11-15 15:36:09 UTC
Problem description: 

Steps to reproduce:
1. Set the environment variable $DATA to the name of some directory unrelated to LibreOffice
2. Ensure no LibreOffice processes are running
3. Launch LibreOffice (/usr/bin/libreoffice)

Current behavior:
The splash screen shows for a few seconds, then it closes and an error message is printed:

terminate called after throwing an instance of 'com::sun::star::uno::RuntimeException'

A process continues to run; "ps -ef" shows "/usr/lib/libreoffice/program/soffice.bin -splash-pipe=5", but no GUI appears.

If $DATA is not set, the GUI appears normally.

Expected behavior:
The GUI should appear normally.

NOTE: I've seen the same behavior in OpenOffice.

I've downloaded the source code to try to track down the problem.
I haven't completely diagnosed it, but I suspect that the
culprit is the Components::parseXcsXcuIniLayer() function in
configmgr/source/components.cxx :

...
if (ini.getFrom(rtl::OUString(RTL_CONSTASCII_USTRINGPARAM("DATA")), urls))
{
parseFileList(layer + 1, &parseXcuFile, urls, ini, recordAdditions);
}

I also wonder whether some other seemingly innocuous environment
variables might cause similar problems.  Suggestion: add tracing to all calls to getenv() to see just what environment variables it's looking at.

See also my e-mail message at http://listarchives.libreoffice.org/global/users/msg13233.html

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (X11; Linux i686) AppleWebKit/535.1 (KHTML, like Gecko) Ubuntu/11.04 Chromium/14.0.835.202 Chrome/14.0.835.202 Safari/535.1
Comment 1 Urmas 2012-02-26 01:54:01 UTC
Still in 3.5.
Comment 2 Takeshi Abe 2012-02-28 07:57:03 UTC
Repro
Comment 3 Urmas 2012-03-14 19:53:05 UTC
*** Bug 47330 has been marked as a duplicate of this bug. ***
Comment 4 Not Assigned 2012-03-15 01:58:16 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=84ecea9655267afc266b79059baa4512a285b1f2

fdo#42961 Don't let env vars interfere with internal bootstrap vars
Comment 5 Not Assigned 2012-03-15 03:08:34 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4f78696117ebe4f729880b5d9bfc2f5817b73543&g=libreoffice-3-5

fdo#42961 Don't let env vars interfere with internal bootstrap vars


It will be available in LibreOffice 3.5.2.
Comment 6 Rainer Bielefeld Retired 2012-03-24 09:52:35 UTC
Fix is in 3.5, 3.6, there will be no 3.4.7, so I closed tis one. Please feel free to reopen if I did wrong.