fdo#42961 Don't let env vars interfere with internal bootstrap vars